--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
    "manifest_version": 3,
    "name": "AutoRaiders",
    "version": "3.0.5",
-   "description": "SR automator",
+   "description": "SR helper",
    "action": {
       "default_popup": "popup.html",
       "default_icon": {
