--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
    "manifest_version": 3,
    "name": "AutoRaiders",
-   "version": "4.0.0",
+   "version": "4.0.1",
    "description": "SR helper",
    "action": {
       "default_popup": "popup.html",
@@ -12,8 +12,7 @@
    },
    "permissions": [
       "storage",
-      "declarativeNetRequestWithHostAccess",
-      "contextMenus"
+      "declarativeNetRequestWithHostAccess"
    ],
    "content_scripts": [
       {
