--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
    "manifest_version": 3,
    "name": "AutoRaiders",
-   "version": "4.0.2",
+   "version": "4.0.3",
    "description": "SR helper",
    "action": {
       "default_popup": "popup.html",
@@ -26,7 +26,8 @@
             "captain_handler.js",
             "inject_handler.js",
             "idle_handler.js",
-            "rotation_handler.js"
+            "rotation_handler.js",
+            "log_handler.js"
          ],
          "matches": [
             "https://www.streamraiders.com/*"
