--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,10 @@
       "storage",
       "declarativeNetRequestWithHostAccess"
    ],
+   "options_ui": {
+      "page": "log.html",
+      "open_in_tab": true
+    },
    "content_scripts": [
       {
          "js": [
