Patch for loyalty redundancy

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
    "permissions": [
       "storage",
       "declarativeNetRequestWithHostAccess",
-      "cookies"
+      "cookies",
+      "declarativeNetRequest"
    ],
    "content_scripts": [
       {
