--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,7 @@
    "permissions": [
       "storage",
       "declarativeNetRequestWithHostAccess",
-      "cookies",
-      "declarativeNetRequest"
+      "cookies"
    ],
    "content_scripts": [
       {
