--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
    "manifest_version": 3,
    "name": "SRHelper",
-   "version": "4.0.28",
+   "version": "4.0.29",
    "description": "Stream Raiders Helper",
    "action": {
       "default_popup": "popup.html",
@@ -15,6 +15,9 @@
       "declarativeNetRequestWithHostAccess",
       "cookies"
    ],
+   "options_ui": {
+      "page": "popup.html"
+   },
    "content_scripts": [
       {
          "js": [
