--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,8 @@
             "open_map_handler.js",
             "masterlist_handler.js",
             "units_handler.js",
-            "battle_message_handler.js"
+            "battle_message_handler.js",
+            "quest_handler.js"
          ],
          "matches": [
             "https://www.streamraiders.com/*"
