--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,8 @@
             "masterlist_handler.js",
             "units_handler.js",
             "battle_message_handler.js",
-            "quest_handler.js"
+            "quest_handler.js",
+            "request_manager.js"
          ],
          "matches": [
             "https://www.streamraiders.com/*"
