--- a/manifest.json
+++ b/manifest.json
@@ -39,7 +39,7 @@
             "units_handler.js",
             "battle_message_handler.js",
             "quest_handler.js",
-            "request_manager.js",
+            "request_handler.js",
             "mouse_events.js"
          ],
          "matches": [
