--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,7 @@
             "masterlist_handler.js",
             "units_handler.js",
             "battle_message_handler.js",
+            "dungeon_slot_manager.js",
             "quest_handler.js",
             "request_handler.js",
             "mouse_events.js",
