added two clickable shortcuts
When the user clicks one of the item images (gold, meat, keys, potions, bones) - open log
When the user clicks the refresh timer - force run the start() function

--- a/manifest.json
+++ b/manifest.json
@@ -68,7 +68,8 @@
       },
       {
          "resources": [
-            "settings.html"
+            "settings.html",
+            "/html/log.html"
          ],
          "matches": [
             "https://www.streamraiders.com/*"
